--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-hyper = { version = "1", features = ["full"] }
 tokio = { version = "1", features = ["full"] }
-http-body-util = "0.1"
-hyper-util = { version = "0.1", features = ["full"] }
+actix = "0.13.1"
+actix-web = "4"
+redis = "0.24.0"
+bytes = "1.5.0"
+env_logger = "0.10.1"
+
+[dependencies.uuid]
+version = "1.6.1"
+features = [
+    "v4",
+    "fast-rng",
+    "macro-diagnostics",
+]
